syntax = "proto3";

package libplanet.rpc.v1;

option csharp_namespace = "Libplanet.Store.Remote";

message KeyValueStorePair {
    KeyValueStoreKey key = 1;
    KeyValueStoreValue value = 2;
}

message KeyValueStoreKey {
    bytes data = 1;
}

message KeyValueStoreValue {
    bytes data = 1;
}
